--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --bg-color: #fefefe;
     --text-color: #111111;
     --accent-color: #888888;
-    --font-main: 'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-main: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 body {
