--- a/style.css
+++ b/style.css
@@ -103,3 +103,10 @@ button {
     max-width: 90%;
     height: auto;
 }
+
+.drawing-area {
+    width: 400px;
+    height: 400px;
+    border: 2px dashed var(--text-color);
+    margin: 2rem 0;
+}
