--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,18 @@ body {
 
 header h1 {
     font-size: 3em;
-    letter-spacing: 2px;
-    margin-bottom: 5px;  /* menos espacio */
+    letter-spacing: 4px; /* más espaciado entre letras */
+    margin-bottom: 5px;  /* espacio entre I.PESOA y EDITORIAL */
     text-transform: uppercase;
+    text-align: center;
 }
 
 header h2 {
     font-size: 1.5em;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
     text-transform: uppercase;
+    text-align: center;
 }
 
 button#random-btn {
