--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,30 @@ button#random-btn:hover {
     }
 }
 
+.links a {
+    position: relative;
+    padding: 2px 6px;            /* espacio alrededor del texto */
+    transition: all 0.2s ease;   /* transición suave */
+}
+
+.links a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.2s ease;
+}
+
+.links a:hover::before {
+    transform: scaleX(1);
+}
+
+.links a:hover {
+    color: #fff;
+}
