--- a/css/style.css
+++ b/css/style.css
@@ -54,25 +54,21 @@ Contenedor de Cartel / Imagen
 }
 
 .imagen-container {
-    width: 300px;
-    height: 424px;
+    width: 308px;
+    height: 432px;
     margin: 0 auto;
     position: relative;
-    overflow: hidden;
     border: 4px solid #000;
-    padding: 5px;
-    box-sizing: content-box;
+    padding: 4px;
+    background-color: #fff;
+    box-sizing: border-box;
 }
 
-/* Imagen */
+/* Imagen - sin object-fit para mantener calidad */
 .imagen-container img {
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 424px;
     display: block;
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    object-fit: cover;
 }
 
 /* Hover text - Fondo blanco, letras negras */
@@ -89,8 +85,8 @@ Contenedor de Cartel / Imagen
     width: 300px;
     height: 424px;
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 4px;
+    left: 4px;
     padding: 0;
     box-sizing: border-box;
     overflow: auto;
@@ -120,7 +116,7 @@ Links debajo de la imagen (index)
 .links {
     display: flex;
     justify-content: space-between;
-    max-width: 318px;
+    max-width: 308px;
     margin: 10px auto;
 }
 
@@ -190,18 +186,18 @@ Responsive Mobile
     }
 
     .imagen-container {
-        width: 90vw;
-        height: calc(90vw * 1.414);
+        width: calc(90vw + 8px);
+        height: calc(90vw * 1.414 + 8px);
     }
 
     .imagen-container img,
     .imagen-container .hover-text {
-        width: calc(100% - 10px);
-        height: calc(100% - 10px);
+        width: 90vw;
+        height: calc(90vw * 1.414);
     }
 
     .links {
-        max-width: calc(90vw + 18px);
+        max-width: calc(90vw + 8px);
     }
 
     header h1 {
